--- a/frontend/src/components/pokemon/pokemon.css
+++ b/frontend/src/components/pokemon/pokemon.css
@@ -1,18 +1,12 @@
-.pokemon {
-    border: 1px solid #cccccc;
-    margin-right: 15px;
-    margin-bottom: 15px;
-}
-
 .subtitle {
     background-color: #cccccc;
     color: black;
-    font-weight: bold;
+    display: inline-flex;
+    width: 100%;
 }
 
 .details {
-    display: inline-block;
-    width: 50%;
+    width: 95%;
 }
 
 .favButton {
@@ -23,9 +17,8 @@
     height: 50px;
     border: none;
     position: relative;
-    left: 50px;
-    top: 5px;
     cursor: pointer;
+    display: flex;
 }
 
 .favicon {
@@ -38,4 +31,11 @@
 
 button:focus {
     outline: 0;
+}
+
+.parentPokemonsContainer {
+    margin-right: 0;
+    margin-left: 0;
+    display: flex;
+    justify-content: center;
 }
