--- a/frontend/src/components/pokemons/pokemons.css
+++ b/frontend/src/components/pokemons/pokemons.css
@@ -10,8 +10,14 @@
     padding-left: 0 !important;
 }
 
-.col-md-4 {
+.col-md-3 {
     padding: 0 !important;
+}
+
+.col-md-2 {
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
 .vl {
@@ -20,13 +26,7 @@
     height: 35px;
 }
 
-.col-md-1 {
-    display: inline-flex;
-}
-
 .layoutButton {
-    position: relative;
-    top: 5px;
     margin-left: 5px;
     margin-right: 5px;
     width: 25px;
@@ -38,4 +38,6 @@
     margin-left: 0px;
     margin-right: 0px;
     margin-bottom: 10px;
+    display: flex;
+    text-align: center;
 }
