Added pokemon detail component. Only evolutions to add remaining

--- a/frontend/src/components/pokemon/pokemon.css
+++ b/frontend/src/components/pokemon/pokemon.css
@@ -1,5 +1,5 @@
 .subtitle {
-    background-color: #cccccc;
+    background-color: #eee;
     color: black;
     display: inline-flex;
     width: 100%;
